--- a/Speart/src/vista/DialogLogin.form
+++ b/Speart/src/vista/DialogLogin.form
@@ -80,6 +80,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JPasswordField" name="txtClave">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtClaveActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="110" y="140" width="180" height="25"/>
