--- a/Speart/src/vista/paneles/evaluacion/DialogEfectos.form
+++ b/Speart/src/vista/paneles/evaluacion/DialogEfectos.form
@@ -166,6 +166,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JComboBox" name="cbNombres">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbNombresActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="80" y="40" width="220" height="30"/>
