--- a/Speart/src/vista/paneles/evaluacion/FrmResultadosEvaluac.form
+++ b/Speart/src/vista/paneles/evaluacion/FrmResultadosEvaluac.form
@@ -561,6 +561,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Guardar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnGuardaResEvaluacionActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="239" y="630" width="110" height="50"/>
