--- a/Speart/src/vista/DialogoMeta.form
+++ b/Speart/src/vista/DialogoMeta.form
@@ -6,6 +6,7 @@
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
+    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
   </SyntheticProperties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -88,14 +89,14 @@
               <StringArray count="12">
                 <StringItem index="0" value="Enero"/>
                 <StringItem index="1" value="Febrero"/>
-                <StringItem index="2" value="Marzo "/>
+                <StringItem index="2" value="Marzo"/>
                 <StringItem index="3" value="Abril"/>
-                <StringItem index="4" value="Mayo "/>
+                <StringItem index="4" value="Mayo"/>
                 <StringItem index="5" value="Junio"/>
-                <StringItem index="6" value="Julio "/>
+                <StringItem index="6" value="Julio"/>
                 <StringItem index="7" value="Agosto"/>
                 <StringItem index="8" value="Septiembre"/>
-                <StringItem index="9" value="Octubre "/>
+                <StringItem index="9" value="Octubre"/>
                 <StringItem index="10" value="Noviembre"/>
                 <StringItem index="11" value="Diciembre"/>
               </StringArray>
