--- a/Speart/src/vista/paneles/usuario/PnlUsuario.form
+++ b/Speart/src/vista/paneles/usuario/PnlUsuario.form
@@ -56,6 +56,9 @@
               <SubComponents>
                 <Component class="javax.swing.JButton" name="btnGuardarUsuario">
                   <Properties>
+                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                      <Image iconType="3" name="/vista/imagenes/document-save.png"/>
+                    </Property>
                     <Property name="text" type="java.lang.String" value="Guardar"/>
                     <Property name="toolTipText" type="java.lang.String" value="Guardar informacion de los usuarios"/>
                     <Property name="alignmentX" type="float" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
