--- a/Speart/reportes/ReporteActividades.jrxml
+++ b/Speart/reportes/ReporteActividades.jrxml
@@ -2,77 +2,59 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="ReporteActividades" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="122"/>
+	<property name="ireport.y" value="61"/>
 	<parameter name="prm_agenda" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
-	<parameter name="prm_completada" class="java.lang.Integer">
-		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
-	</parameter>
 	<parameter name="prm_desde" class="java.lang.String"/>
-	<parameter name="prm_hasta" class="java.lang.String"/>
 	<queryString>
-		<![CDATA[select 	nombre_actividad ACTIVIDADES,
-	porcentaje TOTAL
-from itemagenda,agenda
-where agenda_id=agenda.id
-and agenda.nombre="'"+$P{prm_agenda}+"'"
-and completada=$P{prm_completada}]]>
+		<![CDATA[]]>
 	</queryString>
-	<field name="ACTIVIDADES" class="java.lang.String"/>
-	<field name="TOTAL" class="java.lang.Double"/>
-	<variable name="TOTAL" class="java.lang.Integer" calculation="Sum">
-		<variableExpression><![CDATA[$F{TOTAL}]]></variableExpression>
-		<initialValueExpression><![CDATA[]]></initialValueExpression>
-	</variable>
+	<field name="DIA" class="java.lang.String"/>
+	<field name="NUMERO DIA" class="java.lang.String"/>
+	<field name="MES" class="java.lang.String"/>
+	<field name="HORA INICIO" class="java.lang.String"/>
+	<field name="HORA FIN" class="java.lang.String"/>
+	<field name="TIEMPO" class="java.lang.String"/>
+	<field name="ACTIVIDAD" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
 	<title>
 		<band height="182" splitType="Stretch">
 			<staticText>
-				<reportElement  x="172" y="11" width="264" height="20"/>
+				<reportElement x="172" y="11" width="264" height="20"/>
 				<textElement/>
 				<text><![CDATA[INSTITUTO ECUATORIANO DE SEGURIDAD SOCIAL]]></text>
 			</staticText>
 			<staticText>
-				<reportElement  x="173" y="41" width="283" height="20"/>
+				<reportElement x="173" y="41" width="283" height="20"/>
 				<textElement/>
 				<text><![CDATA[DEPARTAMENTO DE RIESGOS DEL TRABAJO DE LOJA]]></text>
 			</staticText>
 			<textField pattern="EEEEE dd MMMMM yyyy">
-				<reportElement  x="240" y="72" width="166" height="20"/>
+				<reportElement x="240" y="72" width="166" height="20"/>
 				<textElement/>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement  x="173" y="72" width="56" height="20"/>
+				<reportElement x="173" y="72" width="56" height="20"/>
 				<textElement/>
 				<text><![CDATA[FECHA:]]></text>
 			</staticText>
 			<image>
-				<reportElement  x="2" y="11" width="171" height="169"/>
-				<imageExpression><![CDATA["..\\reportes\\LOGO.png"]]></imageExpression>
+				<reportElement x="2" y="11" width="171" height="169"/>
+				<imageExpression><![CDATA[".\\reportes\\LOGO.png"]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement  x="172" y="106" width="85" height="20"/>
+				<reportElement x="172" y="106" width="85" height="20"/>
 				<textElement/>
-				<text><![CDATA[FECHA DESDE:]]></text>
-			</staticText>
-			<staticText>
-				<reportElement  x="172" y="141" width="85" height="20"/>
-				<textElement/>
-				<text><![CDATA[FECHA HASTA:]]></text>
+				<text><![CDATA[MES]]></text>
 			</staticText>
 			<textField>
-				<reportElement  x="270" y="106" width="136" height="20"/>
+				<reportElement x="270" y="106" width="136" height="20"/>
 				<textElement/>
 				<textFieldExpression><![CDATA[$P{prm_desde}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="270" y="141" width="136" height="20"/>
-				<textElement/>
-				<textFieldExpression><![CDATA[$P{prm_hasta}]]></textFieldExpression>
 			</textField>
 		</band>
 	</title>
@@ -82,50 +64,101 @@ and completada=$P{prm_completada}]]>
 	<columnHeader>
 		<band height="25" splitType="Stretch">
 			<staticText>
-				<reportElement  x="26" y="2" width="360" height="20"/>
+				<reportElement x="0" y="0" width="79" height="20"/>
 				<textElement/>
-				<text><![CDATA[ACTIVIDADES]]></text>
+				<text><![CDATA[DIA]]></text>
 			</staticText>
 			<staticText>
-				<reportElement  x="455" y="5" width="100" height="20"/>
+				<reportElement x="79" y="0" width="79" height="20"/>
 				<textElement/>
-				<text><![CDATA[SUB TOTAL]]></text>
+				<text><![CDATA[NUMERO DIA]]></text>
 			</staticText>
+			<staticText>
+				<reportElement x="158" y="0" width="79" height="20"/>
+				<textElement/>
+				<text><![CDATA[MES]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="237" y="0" width="79" height="20"/>
+				<textElement/>
+				<text><![CDATA[HORA INICIO]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="316" y="0" width="79" height="20"/>
+				<textElement/>
+				<text><![CDATA[HORA FIN]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="395" y="0" width="79" height="20"/>
+				<textElement/>
+				<text><![CDATA[TIEMPO]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="474" y="0" width="79" height="20"/>
+				<textElement/>
+				<text><![CDATA[ACTIVIDAD]]></text>
+			</staticText>
+			<rectangle radius="10">
+				<reportElement mode="Transparent" x="0" y="0" width="555" height="20"/>
+			</rectangle>
 		</band>
 	</columnHeader>
 	<detail>
 		<band height="46" splitType="Stretch">
 			<rectangle>
-				<reportElement  x="0" y="0" width="555" height="42" backcolor="#CCCCCC"/>
+				<reportElement x="0" y="0" width="555" height="42" backcolor="#CCCCCC"/>
 			</rectangle>
 			<textField>
-				<reportElement  x="26" y="12" width="360" height="20"/>
+				<reportElement x="0" y="0" width="79" height="42"/>
 				<textElement/>
-				<textFieldExpression><![CDATA[$F{ACTIVIDADES}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{DIA}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement  x="455" y="12" width="100" height="20"/>
+				<reportElement x="79" y="0" width="79" height="42"/>
 				<textElement/>
-				<textFieldExpression><![CDATA[$F{TOTAL}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{NUMERO DIA}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="158" y="0" width="79" height="42"/>
+				<textElement/>
+				<textFieldExpression><![CDATA[$F{MES}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="237" y="0" width="79" height="42"/>
+				<textElement/>
+				<textFieldExpression><![CDATA[$F{HORA INICIO}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="316" y="0" width="79" height="42"/>
+				<textElement/>
+				<textFieldExpression><![CDATA[$F{HORA FIN}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="395" y="0" width="79" height="42"/>
+				<textElement/>
+				<textFieldExpression><![CDATA[$F{TIEMPO}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="474" y="0" width="79" height="42"/>
+				<textElement/>
+				<textFieldExpression><![CDATA[$F{ACTIVIDAD}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="27" splitType="Stretch">
-			<staticText>
-				<reportElement  x="386" y="7" width="50" height="20"/>
-				<textElement/>
-				<text><![CDATA[TOTAL:]]></text>
-			</staticText>
-			<textField>
-				<reportElement  x="455" y="7" width="100" height="20"/>
-				<textElement/>
-				<textFieldExpression><![CDATA[$V{TOTAL}]]></textFieldExpression>
-			</textField>
-		</band>
+		<band height="27" splitType="Stretch"/>
 	</columnFooter>
 	<pageFooter>
-		<band height="54" splitType="Stretch"/>
+		<band height="54" splitType="Stretch">
+			<staticText>
+				<reportElement x="257" y="24" width="50" height="20"/>
+				<textElement/>
+				<text><![CDATA[FIRMA]]></text>
+			</staticText>
+			<line>
+				<reportElement x="229" y="23" width="100" height="1"/>
+			</line>
+		</band>
 	</pageFooter>
 	<summary>
 		<band height="42" splitType="Stretch"/>
